<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milionerki</string>
    <string name="app_name_about">Milionerki - O grze</string>
    <string name="action_settings">Ustawienia</string>
    
    <!-- START -->
    <string name="btn_game_start">Rozpocznij grę</string>
    <string name="btn_game_wyniki">Najlepsze wyniki</string>
    <string name="btn_game_info">O grze</string>

    <!-- O MNIE -->
    <string name="title_system_rozgrywki">System rozgrywki</string>
    <string name="text_system_rozgrywki">
        Gra Milionerki opiera się na większości zasad popularnego teleturnieju "Milionerzy".\n
		Założenia gry są bardzo proste. Aby zdobyć tytułową nagrodę miliona należy odpowiedzieć na 15 zadanych pytań przez prowadzącego. 
		Istnieją dwa progi gwarantowane - pierwszy z nich po 5. pytaniu (1 000) oraz drugi z nich po 10. pytaniu (32 000). 
		Do wykorzystania są trzy koła ratunkowe: pytanie do publiczności, telefon do wirtualnego przyjaciela oraz pół na pół.
    </string>
    <string name="title_wersja">Wersja</string>
    <string name="text_wersja">Milionerki ver 0.01</string>
    <string name="title_autorzy">Autorzy</string>
    <string name="text_autorzy">Damian Gracyzk, Kamil Gammert, Konrad Barbasiewicz, Andrzej Pietrzak, Leszek Sierocki</string>
    
</resources>
