<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/boxShow"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.milionerki.StartActivity" >

    <TextView
        android:id="@+id/rankingView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/btn_game_wyniki"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/aboutMeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rankingView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/btn_game_info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rankingView"
        android:layout_below="@+id/imageView1"
        android:text="@string/btn_game_start"
        android:textColor="@color/fff" />

</RelativeLayout>
